[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildquest-matrix"
version = "6.5.3"
description = "WildQuest Matrix - A股量化投顾系统，数据驱动的智能投资决策平台"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Variya"}
]
maintainers = [
    {name = "Variya"}
]
keywords = [
    "quantitative-finance",
    "stock-analysis",
    "factor-investing",
    "portfolio-optimization",
    "risk-management",
    "backtesting",
    "trading-system",
    "a-share"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
data = [
    "akshare>=1.10.0",
    "tushare>=1.3.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]
backtest = [
    "empyrical-reloaded>=0.5.0",
    "pyfolio-reloaded>=0.9.0",
]
optimization = [
    "cvxpy>=1.3.0",
    "cvxopt>=1.3.0",
    "riskparityportfolio>=0.5.0",
]
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
]
qlib = [
    "pyqlib>=0.9.0",
    "lightgbm>=4.0.0",
    "torch>=2.0.0",
]
rdagent = [
    "rdagent>=0.0.1",
]
viz = [
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",
    "streamlit>=1.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "isort>=5.11.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "a-stock-advisor[data,backtest,optimization,ml,qlib,rdagent,viz,dev]",
]

[project.urls]
Homepage = "https://github.com/quant-team/a-stock-advisor"
Documentation = "https://github.com/quant-team/a-stock-advisor#readme"
Repository = "https://github.com/quant-team/a-stock-advisor.git"
Issues = "https://github.com/quant-team/a-stock-advisor/issues"
Changelog = "https://github.com/quant-team/a-stock-advisor/blob/main/CHANGELOG.md"

[project.scripts]
asa = "core.cli:main"
asa-data = "core.data.cli:main"
asa-backtest = "core.backtest.cli:main"

[tool.setuptools]
packages = ["core", "core.data", "core.factor", "core.signal", "core.portfolio", 
            "core.risk", "core.trading", "core.backtest", "core.evaluation",
            "core.validation", "core.monitor", "core.daily", "core.infrastructure",
            "core.infrastructure.config", "core.data"]

[tool.setuptools.package-data]
core = ["py.typed", "*.pyi"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["core"]
known_third_party = ["numpy", "pandas", "scipy", "sklearn", "pytest"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", "logs/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true
exclude = [
    "data/",
    "logs/",
    "tests/",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=core --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "data",
    "logs",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B", "C"]
